--- a/package.json
+++ b/package.json
@@ -74,7 +74,10 @@
         "yargs": "^17.3.1"
     },
     "dependencies": {
+        "@fancyapps/ui": "^5.0.19",
+        "fancybox": "^3.0.1",
         "jquery": "^3.6.4",
+        "modaal": "^0.4.4",
         "swiper": "^9.2.4",
         "webpack": "^5.70.0",
         "webpack-stream": "^7.0.0"
