--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "dependencies": {
         "@fancyapps/ui": "^5.0.19",
         "fancybox": "^3.0.1",
+        "gulp-file-include": "^2.3.0",
         "jquery": "^3.6.4",
         "modaal": "^0.4.4",
         "swiper": "^9.2.4",
